--- a/css/site.css
+++ b/css/site.css
@@ -4,142 +4,97 @@
     box-sizing: border-box;
 }
 
-/*
- * -- BASE STYLES --
- * Most of these are inherited from Base, but I want to change a few.
- */
 body {
     line-height: 1.7em;
     color: #7f8c8d;
     font-size: 13px;
 }
 
-/*
- * -- LAYOUT STYLES --
- * These are some useful classes which I will need
- */
-
 .is-center {
     text-align: center;
 }
 
-
-
-/*
- * -- PURE FORM STYLES --
- * Style the form inputs and labels
- */
-.pure-form label {
-    margin: 1em 0 0;
-    font-weight: bold;
-    font-size: 100%;
+.pull-right{
+    float: right;
 }
 
-.pure-form input[type] {
-    border: 2px solid #ddd;
-    box-shadow: none;
-    font-size: 100%;
+
+.header {
     width: 100%;
-    margin-bottom: 1em;
+    padding: 0 15% 0 15%;
+    background-color: rgb(241, 238, 238);
+    position: fixed;
 }
 
-/*
- * -- PURE BUTTON STYLES --
- * I want my pure-button elements to look a little different
- */
-.pure-button {
-    background-color: #1f8dd6;
-    color: white;
-    padding: 0.5em 2em;
-    border-radius: 5px;
+.pure-menu-heading {
+    font-size: 2em;
+    padding: 0.7em;
 }
 
-a.pure-button-primary {
-    background: white;
-    color: #1f8dd6;
-    border-radius: 5px;
-    font-size: 120%;
+.pure-menu-list {
+    font-size: 1.5em;
+    float: right;
+    padding: 0.5em 0 0.5em;
 }
 
-
-/*
- * -- MENU STYLES --
- * I want to customize how my .pure-menu looks at the top of the page
- */
-
-.home-menu {
-    padding: 0.5em;
-    text-align: center;
-    box-shadow: 0 1px 1px rgba(0,0,0, 0.10);
-}
-.home-menu {
-    background: #4b5866;
-}
-.pure-menu.pure-menu-fixed {
-    /* Fixed menus normally have a border at the bottom. */
-    border-bottom: none;
-    /* I need a higher z-index here because of the scroll-over effect. */
-    z-index: 4;
+.pure-menu a {
+    color: rgb(51, 58, 63);
 }
 
-.home-menu .pure-menu-heading {
-    color: white;
-    font-weight: 400;
-    font-size: 120%;
-}
-
-.home-menu .pure-menu-selected a {
-    color: white;
-}
-
-.home-menu a {
-    color: #6FBEF3;
-}
-.home-menu li a:hover,
-.home-menu li a:focus {
+.pure-menu a:hover,
+.pure-menu a:focus {
     background: none;
     border: none;
-    color: #AECFE5;
+}
+
+.pure-menu-item a:hover,
+.pure-menu-item a:focus {
+    color: rgb(155, 146, 145);
+}
+
+.content {
+    padding-top: 6em;
+    padding-bottom: 6em;
 }
 
 
-
-/* This is the class used for the footer */
 .footer {
     position: fixed;
+    background-color: #fff;
     bottom: 0;
     width: 100%;
     padding: 1em;
+    border-top: #7f8c8d solid 0.5px;
 }
 
-/*
- * -- TABLET (AND UP) MEDIA QUERIES --
- * On tablets and other medium-sized devices, we want to customize some
- * of the mobile styles.
- */
-@media (min-width: 48em) {
-
-    /* We increase the body font size */
-    body {
-        font-size: 16px;
-    }
-
-    /* We can align the menu header to the left, but float the
-    menu items to the right. */
-    .home-menu {
-        text-align: left;
-        padding-left: 3em;
-        padding-right: 3em;
-    }
-        .home-menu ul {
-            float: right;
-            
-        }
-
-    /* We remove the border-separator assigned to .l-box-lrg */
-    .l-box-lrg {
-        border: none;
-    }
-
+.post {
+    padding-bottom: 2em;
+}
+.post-title {
+    font-size: 2em;
+    color: #222;
+    margin-bottom: 0.2em;
+}
+.post-avatar {
+    border-radius: 50px;
+    float: right;
+    margin-left: 1em;
+}
+.post-description {
+    font-family: Georgia, "Cambria", serif;
+    color: #444;
+    line-height: 1.8em;
+}
+.post-meta {
+    color: #999;
+    /* font-size: 90%; */
+    margin: 0;
 }
 
+.post-category {
+    margin: 0 0.1em;
+    padding: 0.1em 1em;
+    color: #fff;
+    background: rgb(196, 195, 195);
+    font-size: 80%;
+}
